[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Scripts/menuMake.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.104713, 0.104713, 0.119141, 1 )

[node name="menuMake" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 302.0
margin_top = 50.0
margin_right = 722.0
margin_bottom = 550.0
rect_min_size = Vector2( 420, 500 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_lock_": true
}

[node name="HBox" type="HBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 413.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="edgeRight" type="VSeparator" parent="Panel/HBox"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 4.0
margin_bottom = 486.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBox" type="VBoxContainer" parent="Panel/HBox"]
margin_left = 8.0
margin_right = 398.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="-" type="HSeparator" parent="Panel/HBox/VBox"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_right = 390.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Hosting" type="HBoxContainer" parent="Panel/HBox/VBox"]
margin_top = 19.0
margin_right = 390.0
margin_bottom = 45.0
grow_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="HostName" type="LineEdit" parent="Panel/HBox/VBox/Hosting"]
unique_name_in_owner = true
margin_right = 238.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_length = 20
clear_button_enabled = true
placeholder_text = "Input Room Name..."
__meta__ = {
"_edit_lock_": true
}

[node name="HostType" type="OptionButton" parent="Panel/HBox/VBox/Hosting"]
unique_name_in_owner = true
margin_left = 253.0
margin_top = 3.0
margin_right = 333.0
margin_bottom = 23.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Public"
align = 1
icon_align = 1
items = [ "Private", null, false, 0, null, "Friends", null, false, 1, null, "Public", null, false, 2, null, "Hidden", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Host" type="Button" parent="Panel/HBox/VBox/Hosting"]
unique_name_in_owner = true
margin_left = 348.0
margin_top = 3.0
margin_right = 390.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Host"
__meta__ = {
"_edit_lock_": true
}

[node name="--" type="HSeparator" parent="Panel/HBox/VBox"]
margin_top = 49.0
margin_right = 390.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Joining" type="VBoxContainer" parent="Panel/HBox/VBox"]
margin_top = 68.0
margin_right = 390.0
margin_bottom = 424.0
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Search" type="HBoxContainer" parent="Panel/HBox/VBox/Joining"]
margin_right = 390.0
margin_bottom = 26.0
grow_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="FindName" type="LineEdit" parent="Panel/HBox/VBox/Joining/Search"]
unique_name_in_owner = true
margin_right = 336.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_length = 20
clear_button_enabled = true
placeholder_text = "Search for Room Name..."
__meta__ = {
"_edit_lock_": true
}

[node name="Find" type="Button" parent="Panel/HBox/VBox/Joining/Search"]
unique_name_in_owner = true
margin_left = 351.0
margin_top = 3.0
margin_right = 390.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Find"
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Panel/HBox/VBox/Joining"]
margin_top = 41.0
margin_right = 390.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Scroll" type="ScrollContainer" parent="Panel/HBox/VBox/Joining/Panel"]
margin_top = 24.0
margin_right = 390.0
margin_bottom = 315.0
size_flags_horizontal = 8
size_flags_vertical = 8
scroll_horizontal_enabled = false
__meta__ = {
"_edit_lock_": true
}

[node name="Lobbies" type="VBoxContainer" parent="Panel/HBox/VBox/Joining/Panel/Scroll"]
margin_right = 390.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="Panel/HBox/VBox/Joining/Panel"]
margin_right = 390.0
margin_bottom = 24.0
rect_min_size = Vector2( 390, 0 )
custom_styles/normal = SubResource( 1 )
text = "   Lobby Name                                                          Owner"
align = 3
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Divider" type="VSeparator" parent="Panel/HBox/VBox/Joining/Panel"]
modulate = Color( 0.619608, 0.619608, 0.619608, 1 )
anchor_left = 0.39
anchor_right = 0.39
margin_left = 22.9
margin_right = 26.9
margin_bottom = 314.0
__meta__ = {
"_edit_lock_": true
}

[node name="---" type="HSeparator" parent="Panel/HBox/VBox"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_top = 428.0
margin_right = 390.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Cancel" type="Button" parent="Panel/HBox/VBox"]
margin_top = 447.0
margin_right = 390.0
margin_bottom = 467.0
size_flags_horizontal = 7
size_flags_vertical = 0
text = "Cancel"
__meta__ = {
"_edit_lock_": true
}

[node name="----" type="HSeparator" parent="Panel/HBox/VBox"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_top = 471.0
margin_right = 390.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="edgeLeft" type="VSeparator" parent="Panel/HBox"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 402.0
margin_right = 406.0
margin_bottom = 486.0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Panel/HBox/VBox/Hosting/Host" to="." method="host_room"]
[connection signal="pressed" from="Panel/HBox/VBox/Joining/Search/Find" to="." method="find_rooms"]
[connection signal="pressed" from="Panel/HBox/VBox/Cancel" to="." method="_reset"]
